--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+.vscode/launch.json
+pb/*
+.vscode/.settings.json
+.gitignore
+teambeat.code-workspace
