Initial timer attempt

--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
 		"@neodrag/svelte": "^2.0.3",
 		"@shoelace-style/shoelace": "^2.0.0",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
+		"chart.js": "^4.2.1",
+		"colorjs.io": "^0.4.3",
 		"milligram": "^1.4.1",
+		"svelte-chartjs": "^3.1.2",
 		"svelte-cookie": "^1.0.1",
 		"svelte-drag-and-drop-actions": "^1.0.0",
 		"svelte-pocketbase": "^0.0.4"
