--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@milkdown/core": "^7.0.0",
+		"@milkdown/ctx": "^7.0.0",
+		"@milkdown/plugin-listener": "^7.0.0",
+		"@milkdown/preset-commonmark": "^7.0.0",
+		"@milkdown/prose": "^7.0.0",
+		"@milkdown/theme-nord": "^7.0.0",
+		"@milkdown/transformer": "^7.0.0",
 		"@neodrag/svelte": "^2.0.3",
 		"@shoelace-style/shoelace": "^2.0.0",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
@@ -37,6 +44,7 @@
 		"svelte-chartjs": "^3.1.2",
 		"svelte-cookie": "^1.0.1",
 		"svelte-drag-and-drop-actions": "^1.0.0",
+		"svelte-markdown": "^0.2.3",
 		"svelte-pocketbase": "^0.0.4"
 	}
 }
