--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@shoelace-style/shoelace": "^2.0.0",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
 		"bulma": "^0.9.4",
+		"bulmaswatch": "^0.8.1",
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
 		"lodash": "^4.17.21",
