Centralized vote store

--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
 		"bulmaswatch": "^0.8.1",
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
+		"immer-loves-svelte": "^2.2.4",
 		"lodash": "^4.17.21",
 		"milligram": "^1.4.1",
-		"simplemde": "^1.11.2",
 		"svelte-chartjs": "^3.1.2",
 		"svelte-cookie": "^1.0.1",
 		"svelte-drag-and-drop-actions": "^1.0.0",
