--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
 		"immer-loves-svelte": "^2.2.4",
+		"ink-mde": "^0.22.0-dev.3",
 		"lodash": "^4.17.21",
 		"milligram": "^1.4.1",
 		"svelte-chartjs": "^3.1.2",
