Tag input for scene config

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@creativebulma/bulma-tagsinput": "^1.0.3",
 		"@creativebulma/bulma-tooltip": "^1.2.0",
 		"@shoelace-style/shoelace": "^2.3.0",
 		"@sveltejs/vite-plugin-svelte": "^2.0.3",
