--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"ink-mde": "^0.22.0-dev.3",
 		"milligram": "^1.4.1",
 		"svelte-chartjs": "^3.1.2",
+		"svelte-drag-and-drop-actions": "^1.0.0",
 		"svelte-pocketbase": "^0.0.4",
 		"uuid": "^9.0.0"
 	}
