--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@sveltejs/vite-plugin-svelte": "^2.0.3",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
 		"bulma": "^0.9.4",
+		"bulma-slider": "^2.0.5",
 		"bulmaswatch": "^0.8.1",
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
