--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"bulmaswatch": "^0.8.1",
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
+		"debounce": "^1.2.1",
 		"ink-mde": "^0.22.0-dev.3",
 		"milligram": "^1.4.1",
 		"svelte-chartjs": "^3.1.2",
