--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "teambeat",
 	"version": "0.0.1",
 	"private": true,
+	"engines" : { "node": ">=20.6", "npm": ">=9.6" },
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -10,7 +11,8 @@
 		"dockerbuild": "docker build -t teambeat .",
 		"dockerrun": "docker run -p 8080:8080 -v \"$(pwd)\"/pb/pb_data:/pb/pb_data teambeat",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"cypress:open": "cypress open"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
@@ -39,6 +41,7 @@
 		"bulmaswatch": "^0.8.1",
 		"chart.js": "^4.2.1",
 		"colorjs.io": "^0.4.3",
+		"cypress": "^13.2.0",
 		"debounce": "^1.2.1",
 		"ink-mde": "^0.22.0-dev.3",
 		"milligram": "^1.4.1",
