--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "teambeat",
 	"version": "0.0.1",
 	"private": true,
-	"engines" : { "node": ">=20.6", "npm": ">=9.6" },
+	"engines": {
+		"node": ">=20.6",
+		"npm": ">=9.6"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -18,13 +21,8 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-static": "^1.0.5",
 		"@sveltejs/kit": "^1.11.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
 		"sass": "^1.58.3",
-		"svelte": "^3.54.0",
+		"svelte": "^4.0.0",
 		"vite": "^4.1.4"
 	},
 	"type": "module",
@@ -34,7 +32,7 @@
 		"@dicebear/collection": "^5.3.4",
 		"@dicebear/core": "^5.3.4",
 		"@shoelace-style/shoelace": "^2.3.0",
-		"@sveltejs/vite-plugin-svelte": "^2.0.3",
+		"@sveltejs/vite-plugin-svelte": "^2.4.1",
 		"@zerodevx/svelte-toast": "1.0.0-rc.1",
 		"bulma": "^0.9.4",
 		"bulma-slider": "^2.0.5",
@@ -43,12 +41,12 @@
 		"colorjs.io": "^0.4.3",
 		"cypress": "^13.2.0",
 		"debounce": "^1.2.1",
-		"ink-mde": "^0.22.0-dev.3",
+		"ink-mde": "^0.32.0",
 		"milligram": "^1.4.1",
 		"moment": "^2.29.4",
 		"svelte-chartjs": "^3.1.2",
 		"svelte-drag-and-drop-actions": "^1.0.0",
-		"svelte-markdown": "^0.2.3",
+		"svelte-markdown": "^0.4",
 		"svelte-pocketbase": "^0.0.4",
 		"uuid": "^9.0.0"
 	}
